resource-manifests/sa-logic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-logic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: sa.logic.rtd.squareops.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-logic
            port:
              number: 80
